# echovoice

./: .gitignore  192.168.116.41-key.pem  192.168.116.41.pem  LICENSE  README.md  index.html  localhost-key.pem  localhost.pem  package-lock.json  package.json  root+1-key.pem  root+1.pem  tailwind.config.js  vite.config.js
backend/: README.md  pyproject.toml
backend/echovoice/: __init__.py
backend/echovoice/models/: api.py
backend/echovoice/objects/: ai.py
backend/echovoice/routes/: ai.py  index.py
backend/echovoice/utils/: vars.py
frontend/echovoice/: bun.lockb  package.json  tailwind.config.mjs
frontend/echovoice/public/icons/: GithubIcon.astro  microphone.jsx
frontend/echovoice/src/layouts/: Layout.astro
frontend/echovoice/src/pages/: index.astro
frontend/echovoice/src/pages/demo/: index.astro
frontend/echovoice/src/pages/demo/components/: interact.astro  menu.astro
frontend/echovoice/src/pages/demo/components/hooks/: useAudioRecorder.js  usePhotoCapture.js
frontend/echovoice/src/pages/demo/components/ui/: Bentogrid.astro  ButtonMicrophone.jsx  Credits.astro  Element.astro  extras.astro
src/: App.jsx  index.css  main.jsx
src/components/: Hero.jsx  Shadow.jsx  ShadowContent.jsx
src/components/Chat/: Message.jsx  aiService.jsx  v1.jsx
src/pages/: Chat.jsx  Home.jsx  NotFound.jsx
